--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<!-- Five -->
 				<section id="fine-scale-habitat">
 				    <h2>Using a two-decade long study of fish communities in Adirondack lakes to examine habitat use and species associations.</h2>
-				    <img src="images/thumbs/lake2.jpg" alt="lake image" class="float-image" />
+				    <img src="images/fulls/lake2.jpg" alt="lake image" class="float-image" />
 				    <p>To restore native fish populations and bolster a lake trout fishery, the Adirondack Fishery Research Program has been removing smallmouth bass from two Adirondack lakes for more than two decades. During this time, fish communities have been monitored throughout the littoral area of these lakes. To understand how these taxa are distributed throughout the varying habitat, we combine these long-term datasets on catch per unit effort (CPUE) with data on the size structure of the community and habitat surveys of both lakes.</p>
 				
 
