--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<a href="#non-native-predators" class="button">Learn More</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/lake2.jpg" class="image fit thumb"><img src="images/thumbs/lake2.jpg" alt="" /></a>
+								<a href="images/thumbs/SMB_image_large.jpg" class="image fit thumb"><img src="images/thumbs/lake2.jpg" alt="" /></a>
 								<h3>Fine-scale habitat use of native littoral fishes</h3>
 								<p>Using a two-decade long study of fish communities in Adirondack lakes to examine habitat use and species associations.</p>
 								<a href="#fine-scale-habitat" class="button">Learn More</a>
@@ -109,7 +109,7 @@
 				<!-- Four -->
 				<section id="non-native-predators">
 				    <h2>Using community data from the Adirondack park to determine patterns of species assemblages</h2>
-				    <img src="images/thumbs/SMB_image_large.jpg" alt="bass photo" class="float-image" />
+				    <img src="images/thumbs/SMB_image_tiny.jpg" alt="bass photo" class="float-image" />
 				    <p>Sportfish are commonly introduced into montane lakes to encourage recreational fisheries. Often, montane lake fish evolve in the absence of highly-piscivorous, nearshore-predators. So, these introductions create novel environments where small-bodied taxa usually decline in abundance, shift in assemblage, or are extirpated. Here we leveraged community data from over 1,100 lakes in the Adirondack Park of upstate New York to examine assemblage patterns across this landscape. We combine this assemblage data and stable isotope food webs to ask questions about how rarity and cooccurrence influence trophic niches.</p>
 				
 
