--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
 				<!-- Six -->
 				<section id="trophic-diversity">
 				    <h2>Using stable isotopes to examine the trophic diversity, niche overlap, and diet specialization of native leuciscidae.</h2>
-				    <h2>Using community data from the Adirondack park to determine patterns of species assemblages</h2>
+				    
 				    <img src="images/thumbs/minnow_gif.gif" alt="minnow gif" class="float-image" />
-				    <p>Sportfish are commonly introduced into montane lakes to encourage recreational fisheries. Often, montane lake fish evolve in the absence of highly-piscivorous, nearshore-predators. So, these introductions create novel environments where small-bodied taxa usually decline in abundance, shift in assemblage, or are extirpated. Here we leveraged community data from over 1,100 lakes in the Adirondack Park of upstate New York to examine assemblage patterns across this landscape. We combine this assemblage data and stable isotope food webs to ask questions about how rarity and cooccurrence influence trophic niches.</p>
+				    <p>Native minnows are an important component of biodiversity on both national and regional scales. Leuciscidae are the most species rich group of fish in the United states and have an equally interesting and diversity range of trophic strategies. This project focuses on using stable isotopes to uncover the foraging niches of minnows that are native to upstate New York. We explore the trophic diversity, niche size, and species trophic overlap through the use of d13C and d15N. </p>
 				
 
 				    <style>
