--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 								<a href="#lionfish-details" class="button">Learn More</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/lake.jpg" class="image fit thumb"><img src="images/thumbs/lake.jpg" alt="" /></a>
+								<a href="images/thumbs/SMB_image_large.jpg" class="image fit thumb"><img src="images/thumbs/SMB_image_large.jpg" alt="" /></a>
 								<h3>Non-native predators in montane lakes</h3>
 								<p>Using community data from the Adirondack park to determine patterns of species assemblages.</p>
 								<a href="#non-native-predators" class="button">Learn More</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/thumbs/SMB_image_large.jpg" class="image fit thumb"><img src="images/thumbs/lake2.jpg" alt="" /></a>
+								<a href="images/thumbs/lake2.jpg" class="image fit thumb"><img src="images/thumbs/lake2.jpg" alt="" /></a>
 								<h3>Fine-scale habitat use of native littoral fishes</h3>
 								<p>Using a two-decade long study of fish communities in Adirondack lakes to examine habitat use and species associations.</p>
 								<a href="#fine-scale-habitat" class="button">Learn More</a>
