--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 
 				</div>
 
-			<!-- Banner -->
-				#<section id="banner">
-				#	<header>
-				#		<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
-				#		<a href="#" class="button">Learn More</a>
-				#	</header>
-				#</section>
-
+			<!-- Banner  ### I commented this out 
+				<section id="banner">
+					<header>
+						<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
+						<a href="#" class="button">Learn More</a>
+					</header>
+				</section>
+			-->
 			<!-- Highlights -->
 				<section class="wrapper style1">
 					<div class="container">
@@ -93,8 +93,8 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>A gigantic heading you can use for whatever</h2>
-							<p>With a much smaller subtitle hanging out just below it</p>
+							<h2>Past and Ongoing Research</h2>
+							<!--<p>With a much smaller subtitle hanging out just below it</p> -->
 						</header>
 					</div>
 				</section>
