--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 
 				</div>
 
-			<!-- Banner  ### I commented this out 
+			<!-- Banner  ### I commented this out -->
 				<section id="banner">
 					<header>
 						<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
 						<a href="#" class="button">Learn More</a>
 					</header>
 				</section>
-			-->
+			
 			<!-- Highlights -->
 				<section class="wrapper style1">
 					<div class="container">
