--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 			<!-- Banner  ### I commented this out -->
 				<section id="banner">
 					<header>
-						<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
-						<a href="#" class="button">Learn More</a>
+						<h2>Understanding the distribution and ecology of native fishes:<em>An approach combining stable isotopes and community assemblage data across time and space 
 					</header>
 				</section>
 			
