--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<!-- Banner  ### I commented this out -->
 				<section id="banner">
 					<header>
-						<h2>Understanding the distribution and ecology of native fishes:<em>An approach combining stable isotopes and community assemblage data across time and space 
+						<h2>Understanding the distribution and ecology of native fishes
 					</header>
 				</section>
 			
