--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Arcana by HTML5 UP
+	Airey Research Home
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -95,7 +95,7 @@
 
 										<article>
 											<header>
-												<h2>Left Sidebar</h2>
+												<h2>Research Overview</h2>
 												<p>Sidebar on the left, content on the right.</p>
 											</header>
 
