--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<li><a href="left-sidebar.html">Research Overview</a></li>
 								<li><a href="right-sidebar.html">
 								About Me</a></li>
-								<li><a href="two-sidebar.html">Two Teaching and Mentorship</a></li>
+								<li><a href="two-sidebar.html"> Teaching and Mentorship</a></li>
 							</ul>
 						</nav>
 
