--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -43,10 +43,10 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li class="current"><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li class="current"><a href="left-sidebar.html">Research Overview</a></li>
+								<li><a href="two-sidebar.html"> Teaching and Mentorship</a></li>
+								<li><a href="right-sidebar.html">
+								About Me</a></li>
 							</ul>
 						</nav>
 
