updating research summaries

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/thumbs/SMB_image_tiny.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The First Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Non-native predators</h3>
+										<p>Researching how non-native predators alter lake food webs, shift native fish distributions, change resource use, and reshape community interactions with consequences for ecosystem resilience</p>
 									</div>
 								</div>
 							</section>
