--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/thumbs/minnow_gif.gif" alt="" /></a>
 									<div class="inner">
-										<h3>The Second Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Trophic Diversity</h3>
+										<p>Small fishes comprise an important component of native biodiversity. We explore trophic diversity, niche size, and community associations of native mesopredators.</p>
 									</div>
 								</div>
 							</section>
