--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/thumbs/SMB_image_tiny.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/thumbs/SMB_image.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Non-native predators</h3>
 										<p>Researching how non-native predators alter lake food webs, shift native fish distributions, change resource use, and reshape community interactions with consequences for ecosystem resilience</p>
