--- a/TeachingMentorship.html
+++ b/TeachingMentorship.html
@@ -44,7 +44,7 @@
 									</ul>
 								</li>
 								<li class="current"><a href="TeachingMentorhip.html">Teaching and Mentorship</a></li>
-								<li><a href="RearchOverview.html"> Research Overview</a></li>
+								<li><a href="ResearchOverview.html"> Research Overview</a></li>
 								<li><a href="right-sidebar.html">
 								About Me</a></li>
 							</ul>
