--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/thumbs/lionfish_thumb_tiny.jpg" alt="Lionfish Thumb" /></a>
 									<div class="inner">
-										<h3>The Third Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Fish Habitat Use with Otolith Microchemistry</h3>
+										<p> Use of otolith microchemistry to examine both dispersal in invasive lionfish in the Caribbean and thermal habitat partitioning in temperate lake fish</p>
 									</div>
 								</div>
 							</section>
