updating home menu

--- a/TeachingMentorship.html
+++ b/TeachingMentorship.html
@@ -43,7 +43,7 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li class="current"><a href="TeachingMentorhip.html">Teaching and Mentorship</a></li>
+								<li class="current"><a href="TeachingMentorship.html">Teaching and Mentorship</a></li>
 								<li><a href="ResearchOverview.html"> Research Overview</a></li>
 								<li><a href="right-sidebar.html">
 								About Me</a></li>
