--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
 								<div class="box highlight">
 									<i class="icon solid major fa-paper-plane"></i>
 									<h3>Aquatic Ecology</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<p>Linking aquatic environments to the organisms they support.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-pencil-alt"></i>
 									<h3>Trophic Ecology</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<p>Tracing energy flows and functional roles through freshwater food webs.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-wrench"></i>
 									<h3>Community Ecology</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<p>Exploring how fishes interact, coexist, and respond to change.</p>
 								</div>
 							</section>
 						</div>
