--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/thumbs/lionfish_thumb_tiny.jpg" alt="Lionfish Thumb" /></a>
+									<a href="#" class="image left"><img src="images/thumbs/lionfish_thumb.jpg" alt="Lionfish Thumb" /></a>
 									<div class="inner">
 										<h3>Fish Habitat Use with Otolith Microchemistry</h3>
 										<p> Use of otolith microchemistry to examine both dispersal in invasive lionfish in the Caribbean and thermal habitat partitioning in temperate lake fish</p>
@@ -133,10 +133,10 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/thumbs/lake2.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Fourth Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Food Web Landcapes</h3>
+										<p>Combining stable isotope and community data to understand the flow of energy within communities.</p>
 									</div>
 								</div>
 							</section>
