--- a/index.html
+++ b/index.html
@@ -77,11 +77,13 @@
 									<p>Tracing energy flows and functional roles through freshwater food webs.</p>
 								</div>
 							</section>
+
+
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-wrench"></i>
-									<h3>Community Ecology</h3>
-									<p>Exploring how fishes interact, coexist, and respond to change.</p>
+								    <img src="images/bg.jpg" alt="Community Ecology"  style="width:80px; height:80px; border-radius:50%; display:block; margin:0 auto 15px;">
+								    <h3>Community Ecology</h3>
+								    <p>Exploring how fishes interact, coexist, and respond to change.</p>
 								</div>
 							</section>
 						</div>
@@ -144,17 +146,7 @@
 					</div>
 				</section>
 
-			<!-- CTA -->
-				<section id="cta" class="wrapper style3">
-					<div class="container">
-						<header>
-							<h2>Are you ready to continue your quest?</h2>
-							<a href="#" class="button">Insert Coin</a>
-						</header>
-					</div>
-				</section>
-
-			<!-- Footer -->
+		<!-- Footer -->
 				<div id="footer">
 					<div class="container">
 						<div class="row">
@@ -188,16 +180,13 @@
 							
 							<li><a href="https://github.com/meairey" class="icon brands fa-github" target = "_blank"  rel="noopener noreferrer"><span class="label">GitHub</span>  </a> </li>
 							
-							<li><a href="https://scholar-google-com.proxy.library.cornell.edu/citations?user=1699kh8AAAAJ&hl=en&oi=ao" class="icon solid fa-graduation-cap" target="_blank" rel="noopener noreferrer">
-
-    <span class="label">Google Scholar</span>
-  </a></li>
+							<li><a href="https://scholar-google-com.proxy.library.cornell.edu/citations?user=1699kh8AAAAJ&hl=en&oi=ao" class="icon solid fa-graduation-cap" target="_blank" rel="noopener noreferrer"><span class="label">Google Scholar</span></a></li>
 						</ul>
 
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 2025. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 
