--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-								    <img src="images/bg.jpg" alt="Community Ecology"  style="width:80px; height:80px; border-radius:50%; display:block; margin:0 auto 15px;">
+								    <img src="images/fish.jpg" alt="Community Ecology"  style="width:80px; height:80px; border-radius:50%; display:block; margin:0 auto 15px;">
 								    <h3>Community Ecology</h3>
 								    <p>Exploring how fishes interact, coexist, and respond to change.</p>
 								</div>
