--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 						<div class="row gtr-200">
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-paper-plane"></i>
+									<img src="images/fulls/lake.jpg" alt="Community Ecology"   style="width:80px; height:80px; border-radius:50%; display:block; margin:0 auto 15px; object-fit:cover;">
 									<h3>Aquatic Ecology</h3>
 									<p>Linking aquatic environments to the organisms they support.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-pencil-alt"></i>
+									<img src="images/Montana_MWT.jpg" alt="Community Ecology"   style="width:80px; height:80px; border-radius:50%; display:block; margin:0 auto 15px; object-fit:cover;">
 									<h3>Trophic Ecology</h3>
 									<p>Tracing energy flows and functional roles through freshwater food webs.</p>
 								</div>
@@ -81,7 +81,7 @@
 
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-								    <img src="images/fish.jpg" alt="Community Ecology"  style="width:80px; height:80px; border-radius:50%; display:block; margin:0 auto 15px;">
+								    <img src="images/fish.jpg" alt="Community Ecology"   style="width:80px; height:80px; border-radius:50%; display:block; margin:0 auto 15px; object-fit:cover;">
 								    <h3>Community Ecology</h3>
 								    <p>Exploring how fishes interact, coexist, and respond to change.</p>
 								</div>
