--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="ResearchOverview.html">Research Overview</a></li>
+								<li><a href="ResearchOverview.html">Research Overview </a></li>
 								<li><a href="TeachingMentorship.html"> Teaching and Mentorship</a></li>
-								<li><a href="right-sidebar.html">
-								About Me</a></li>
+								<li><a href="right-sidebar.html"> About Me</a></li>
 							</ul>
 						</nav>
 
