--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>Past and Ongoing Research</h2>
+							<h2>Research Areas</h2>
 							<!--<p>With a much smaller subtitle hanging out just below it</p> -->
 						</header>
 					</div>
