--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -45,8 +45,7 @@
 								</li>
 								<li class="current"><a href="left-sidebar.html">Research Overview</a></li>
 								<li><a href="TeachingMentorship.html"> Teaching and Mentorship</a></li>
-								<li><a href="right-sidebar.html">
-								About Me</a></li>
+								<li><a href="no-sidebar.html">About Me</a></li>
 							</ul>
 						</nav>
 
