--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 									</ul>
 								</li>
 								<li><a href="ResearchOverview.html">Research Overview </a></li>
-								<li><a href="TeachingMentorship.html"> Teaching and Mentorship</a></li>
-								<li><a href="right-sidebar.html"> About Me</a></li>
+								<li><a href="TeachingMentorship.html">Teaching and Mentorship</a></li>
+								<li><a href="no-sidebar.html">About Me</a></li>
 							</ul>
 						</nav>
 
