--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -64,7 +64,7 @@
 										<p>All content, all the time.</p>
 									</header>
 
-									<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+									<span class="image featured"><img src="images/Montana_MWT.jpg" alt="" /></span>
 
 									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
