--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -64,7 +64,9 @@
 										<p>All content, all the time.</p>
 									</header>
 
-									<span class="image featured"><img src="images/Montana_MWT.jpg" alt="" /></span>
+									<span class="image featured">
+										<img src="images/Montana_MWT.jpg" alt="" style="width:300px; height:auto; display:block; margin:0 auto;" />
+									</span>
 
 									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
