--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Arcana by HTML5 UP</title>
+		<title>No Sidebar - Airey Research Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -52,7 +52,7 @@
 
 									<p>I am an aquatic ecologist who is broadly interested in the distribution of aquatic organisms and how community assemblages are shaped by trophic interactions. While I am an avid field ecologist, using datasets that span across both space and time is an important compoent of my work. By combining stable isotope eccology, both fine- and broad-scale spatial data, and temporal population trends, I enjoy characterizing the ecologies of freshwater and marine fishes across scales.</p>
 
-									<h3>Research and Education</h3>
+									<h3>Education</h3>
 									<p> I am currently a postdoc in the Department of Natural Resources and the Environment at Cornell University.</p>
 									<ul>
 									  <li>Ph.D. in Ecology, Cornell University (2025)</li>
@@ -61,9 +61,19 @@
 									</ul>
 
 
-							
+
 									
 								</article>
+
+
+							<div style="text-align: right;">
+							    <ul class="actions" style="display: inline-block; margin-right: 10px;">
+							        <li><a href="#Get-in-touch" class="button">Contact</a></li>
+							    </ul>
+							    <ul class="actions" style="display: inline-block;">
+							        <li><a href="#CV" class="button">CV</a></li>
+							    </ul>
+							</div>
 
 						</div>
 					</div>
