--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li><a href="ResearchOverview.html">Research Overview </a></li>
+
+								<li>
+									<a href="ResearchOverview.html">Dropdown</a>
+									<ul>
+										<li><a href="#">Non-native predators</a></li>
+										<li><a href="#">Trophic diversity</a></li>
+										<li><a href="#">Habitat use</a></li>
+										<li><a href="#">Food web landscapes</a><li>
+										
+									</ul>
+								</li>
+
 								<li><a href="TeachingMentorship.html">Teaching and Mentorship</a></li>
 								<li><a href="no-sidebar.html">About Me</a></li>
 							</ul>
