--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li><a href="ResearchOverview.html">Research Overview </a></li>
+								
 
 								<li>
-									<a href="ResearchOverview.html">Dropdown</a>
+									<a href="ResearchOverview.html">Research Overview</a>
 									<ul>
 										<li><a href="#">Non-native predators</a></li>
 										<li><a href="#">Trophic diversity</a></li>
