--- a/NonNativePred.html
+++ b/NonNativePred.html
@@ -36,6 +36,7 @@
 								</li>
 								
 								<li><a href="TeachingMentorship.html">Teaching and Mentorship</a></li>
+								<li><a href="no-sidebar.html">About Me</a></li>
 								
 							</ul>
 						</nav>
@@ -56,7 +57,7 @@
 									</header>
 
 									<span class="image featured">
-										<img src="images/SMB_image.jpg" alt="" style="width:300px; height:auto; display:block; margin:0 auto;" />
+										<img src="images/thumbs/SMB_image.jpg" alt="" style="width:300px; height:auto; display:block; margin:0 auto;" />
 									</span>
 
 									<p>In progress</p>
