--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -30,15 +30,13 @@
 								<li
 									class="current"><a href="ResearchOverview.html">Research Overview</a>
 									<ul>
-										<li><a href="#">Non-native predators</a></li>
-										<li><a href="#">Trophic diversity</a></li>
-										<li><a href="#">Habitat use</a></li>
-										<li><a href="#">Food web landscapes</a><li>
+										<li><a href="NonNativePred.html">Non-native predators</a></li>
+										<li><a href="TrophicDiversity.html">Trophic diversity</a></li>
+										<li><a href="HabitatUse.html">Habitat use</a></li>
+										<li><a href="FoodWebLandscapes.html">Food web landscapes</a><li>
 										
 									</ul>
 								</li>
-
-
 								<li><a href="TeachingMentorship.html"> Teaching and Mentorship</a></li>
 								<li><a href="no-sidebar.html">About Me</a></li>
 							</ul>
