--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -25,7 +25,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								
-								<li>
+								<li> <a href="ResearchOverview.html">Research Overview</a>
 									
 									<ul>
 										<li><a href="NonNativePred.html">Non-native predators</a></li>
@@ -37,6 +37,7 @@
 								</li>
 
 								<li><a href="TeachingMentorship.html">Teaching and Mentorship</a></li>
+
 								<li class="current"><a href="no-sidebar.html">About Me</a></li>
 							</ul>
 						</nav>
