--- a/TrophicDiversity.html
+++ b/TrophicDiversity.html
@@ -57,7 +57,7 @@
 									</header>
 
 									<span class="image featured">
-										<img src="images/thumbs/minnow_gif.jpg" alt="" style="width:500px; height:auto; display:block; margin:0 auto;" />
+										<img src="images/thumbs/minnow_gif.gif" alt="" style="width:500px; height:auto; display:block; margin:0 auto;" />
 									</span>
 
 									<p>In progress</p>
