updating research overview

--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -77,20 +77,21 @@
 										<article>
 											<header>
 												<h2>Research Overview</h2>
-												<p>Sidebar on the left, content on the right.</p>
+												<p>Understanding the distribution and ecology of native fishes</p>
 											</header>
 
 											<span class="image featured"><img src="images/fulls/lake.jpg" alt="" /></span>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
+											<p></p>
 
-											<h3>And Yet Another Subheading</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+											<p> Aquatic ecosystems are shaped both by the choices of individual fish and the interactions among communities. My work aims to connect those scales, linking food web structure and long-term community changes to habitat use and assemblage structures. 
 
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. </p>
+											<h3>Food Webs and Communities</h3>
+											<p> At broad spatial and temporal scales, this work examines how species interactions structure aquatic assemblages. I use stable isotope ecology to characterize food web organization, with a focus on how communities respod to disturbances like non-native predator introductions and climate change. I use spatial surveys and time-series data to provide insight ito commmunity composition, integrating species- to ecosystem-level perspectives on aquatic biodiversity.</p>
+
+											<h3>Habitat Use and Movement<h3>
+
+											<p>This research uses community data and otolith chemistry to investigate how fishes interact with their environment. Analyses of otoliths reveal movement histories and thermal habitat use, spanning systems  from invasive lionfish to native fish in Montane lakes. These approaches link individual habitat choices to broader ecological processes, exploring the interaction between environmental variation and species' distribution.</p>
 										</article>
 
 								</div>
