updating teaching and mentoring

--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -89,7 +89,7 @@
 											<h3>Food Webs and Communities</h3>
 											<p> At broad spatial and temporal scales, this work examines how species interactions structure aquatic assemblages. I use stable isotope ecology to characterize food web organization, with a focus on how communities respod to disturbances like non-native predator introductions and climate change. I use spatial surveys and time-series data to provide insight ito commmunity composition, integrating species- to ecosystem-level perspectives on aquatic biodiversity.</p>
 
-											<h3>Habitat Use and Movement<h3>
+											<h3>Habitat Use and Movement</h3>
 
 											<p>This research uses community data and otolith chemistry to investigate how fishes interact with their environment. Analyses of otoliths reveal movement histories and thermal habitat use, spanning systems  from invasive lionfish to native fish in Montane lakes. These approaches link individual habitat choices to broader ecological processes, exploring the interaction between environmental variation and species' distribution.</p>
 										</article>
