--- a/TeachingMentorship.html
+++ b/TeachingMentorship.html
@@ -25,8 +25,8 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 															
-								<li
-									class="current"><a href="ResearchOverview.html">Research Overview</a>
+								<li>
+									<a href="ResearchOverview.html">Research Overview</a>
 									<ul>
 										<li><a href="NonNativePred.html">Non-native predators</a></li>
 										<li><a href="TrophicDiversity.html">Trophic diversity</a></li>
@@ -53,14 +53,6 @@
 									<!-- Sidebar -->
 
 										<section>
-											
-											<p>Teaching, mentorship, and outreach are important components of my science. </p>
-											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
-										</section>
-
-										<section>
 											<h3>Related Papers and Resources</h3>
 											<ul class="links">
 												<li><a href="https://par.nsf.gov/servlets/purl/10373913">CourseSource Lesson on Extinction</a></li>
@@ -78,8 +70,7 @@
 							    <!-- Content -->
 							    <article>
 							      <header>
-							        <h2>Research Overview</h2>
-							        <p>Sidebar on the left, content on the right.</p>
+							        <h2>Teaching and Mentorship</h2>
 							      </header>
 
 							      <span class="image featured">
@@ -91,10 +82,12 @@
 							      Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
 							      consequat etiam lorem ipsum dolor sit amet nullam.</p>
 
-							      <h3>And Yet Another Subheading</h3>
-							      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-							      justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-							      ultricies a bibendum id, bibendum sit amet nisl...</p>
+							      <h3>Teaching</h3>
+							      <li>
+
+							      	<ul> cat </ul>
+
+							      </li>
 
 							      <p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
 							      quis hendrerit porttitor, sapien tortor viverra magna...</p>
