updating teaching and mentorship

--- a/TeachingMentorship.html
+++ b/TeachingMentorship.html
@@ -83,14 +83,16 @@
 							      consequat etiam lorem ipsum dolor sit amet nullam.</p>
 
 							      <h3>Teaching</h3>
-							      <li>
+							      <p> My teaching experiences span from introductory courses to advanced field-based courses for upper classmen. Check out the link above to see my published lesson plan for teaching about mass extinctions!
+							      <ul>
+							      	<li>Stream Ecology (TA) - A field-based course that incorporates both field and labwork to help students develop a deeper understanding of the biological and physical processes that shape streams and rivers. </li>
+							      	<li> Ecology and the Environment (TA) - An introductory course to teach both majors and non-majors the fundamentals of ecology. </li>
+							      	<li> Data Carpentry Workshop (Co-Lead) - Used materials from R Carpentry to co-teach undergraduates the basics of R and visualizations in R Studio</li>	
 
-							      	<ul>cat</ul>
 
-							      </li>
+							      </ul>
 
-							      <p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-							      quis hendrerit porttitor, sapien tortor viverra magna...</p>
+							      <h3>Mentorship</h3>
 							    </article>
 
 							  </div>
