--- a/TeachingMentorship.html
+++ b/TeachingMentorship.html
@@ -28,10 +28,8 @@
 								<li>
 									<a href="ResearchOverview.html">Research Overview</a>
 									<ul>
-										<li><a href="NonNativePred.html">Non-native predators</a></li>
-										<li><a href="TrophicDiversity.html">Trophic diversity</a></li>
-										<li><a href="HabitatUse.html">Habitat use</a></li>
-										<li><a href="FoodWebLandscapes.html">Food web landscapes</a><li>
+										<li><a href="NonNativePred.html">Food Webs and Communities</a></li>
+										<li><a href="TrophicDiversity.html">Habitat Use and Movement</a></li>
 										
 									</ul>
 								</li>
@@ -93,6 +91,12 @@
 							      </ul>
 
 							      <h3>Mentorship</h3>
+							      <p> I am committed to mentoring students at all levels, helping them build confidence in research design, field and lab methods, and data analysis while supporting their academic and career goals. My previous experiences include:</p>
+							      <ul>
+							      	<li> Undergraduate Research Mentorship - Training students for field sampling, lab work, and statistical analysis. </li>
+							      	<li> Senior Thesis Advising - Guided undergraduates through design, execution, and writing of capstone research projects. <a href = "https://link.springer.com/article/10.1007/s10750-025-05958-3" target = "_blank">Check out a recent mentee's paper!</a> </li>
+							      	<li> High School Mentorting - Worked with high school students whose families are stakeholders in the study system, teaching foundational concepts in aquatic science and fostering direct engagement with their environment.</li>
+
 							    </article>
 
 							  </div>
