--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -30,10 +30,8 @@
 								<li
 									class="current"><a href="ResearchOverview.html">Research Overview</a>
 									<ul>
-										<li><a href="NonNativePred.html">Non-native predators</a></li>
-										<li><a href="TrophicDiversity.html">Trophic diversity</a></li>
-										<li><a href="HabitatUse.html">Habitat use</a></li>
-										<li><a href="FoodWebLandscapes.html">Food web landscapes</a><li>
+										<li><a href="NonNativePred.html">Food Webs and Communities</a></li>
+										<li><a href="TrophicDiversity.html">Habitat Use and Movement</a></li>
 										
 									</ul>
 								</li>
