--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -55,7 +55,7 @@
 											<h3>Research Areas</h3>
 											<p>Click on each topic for further information on the relevant projects!</p>
 											
-											<img src="images/thumbs/minnow_gif.gif" alt="Food Webs" style="width:20px; height:20px; vertical-align:middle; margin-right:5px;">
+											<img src="images/thumbs/minnow_gif.gif" alt="Food Webs" style="width:30px; height:30px; display:inline-block; vertical-align:middle; margin-right:5px; transform: translateY(2px);">
 										
 											<ul class="links">
 												<li><a href="NonNativePred.html">Food Webs and Communities </a></li>
