--- a/TeachingMentorship.html
+++ b/TeachingMentorship.html
@@ -72,7 +72,7 @@
 							      </header>
 
 							      <span class="image featured">
-							        <img src="images/fulls/lake.jpg" alt="" />
+							        <img src="images/boat_Montana.jpg" alt="" />
 							      </span>
 
 							      <h3>Teaching</h3>
