--- a/TeachingMentorship.html
+++ b/TeachingMentorship.html
@@ -35,7 +35,7 @@
 								</li>
 								
 								<li class="current"><a href="TeachingMentorship.html">Teaching and Mentorship</a></li>
-								<li><a href="no-sidebar.html">About Me</a></li>
+								<li><a href=AboutMe.html">About Me</a></li>
 							</ul>
 						</nav>
 
@@ -72,7 +72,7 @@
 							      </header>
 
 							      <span class="image featured">
-							        <img src="images/boat_Montana.jpg" alt="" />
+							        <img src="images/boat_Montana_small.jpg" alt="" />
 							      </span>
 
 							      <h3>Teaching</h3>
