--- a/AboutMe.html
+++ b/AboutMe.html
@@ -28,17 +28,15 @@
 								<li> <a href="ResearchOverview.html">Research Overview</a>
 									
 									<ul>
-										<li><a href="NonNativePred.html">Non-native predators</a></li>
-										<li><a href="TrophicDiversity.html">Trophic diversity</a></li>
-										<li><a href="HabitatUse.html">Habitat use</a></li>
-										<li><a href="FoodWebLandscapes.html">Food web landscapes</a><li>
+										<li><a href="NonNativePred.html">Food Webs and Communities</a></li>
+										<li><a href="TrophicDiversity.html">Habitat Use and Movement</a></li>
 										
 									</ul>
 								</li>
 
 								<li><a href="TeachingMentorship.html">Teaching and Mentorship</a></li>
 
-								<li class="current"><a href="no-sidebar.html">About Me</a></li>
+								<li class="current"><a href="AboutMe.html">About Me</a></li>
 							</ul>
 						</nav>
 
