--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -36,7 +36,7 @@
 									</ul>
 								</li>
 								<li><a href="TeachingMentorship.html"> Teaching and Mentorship</a></li>
-								<li><a href="no-sidebar.html">About Me</a></li>
+								<li><a href="AboutMe.html">About Me</a></li>
 							</ul>
 						</nav>
 
