--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 								<li><a href="TeachingMentorship.html">Teaching and Mentorship</a></li>
 
 								
-								<li><a href="no-sidebar.html">About Me</a></li>
+								<li><a href="AboutMe.html">About Me</a></li>
 							</ul>
 						</nav>
 
