--- a/TeachingMentorship.html
+++ b/TeachingMentorship.html
@@ -35,7 +35,7 @@
 								</li>
 								
 								<li class="current"><a href="TeachingMentorship.html">Teaching and Mentorship</a></li>
-								<li><a href=AboutMe.html">About Me</a></li>
+								<li><a href="AboutMe.html">About Me</a></li>
 							</ul>
 						</nav>
 
