--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -35,7 +35,7 @@
 										
 									</ul>
 								</li>
-								<li><a href="TeachingMentorship.html"> Teaching and Mentorship</a></li>
+								<li><a href="/TeachingMentorship/">Teaching and Mentorship</a></li>
 								<li><a href="AboutMe.html">About Me</a></li>
 							</ul>
 						</nav>
