--- a/AboutMe.html
+++ b/AboutMe.html
@@ -34,7 +34,7 @@
 									</ul>
 								</li>
 
-								<li><a href="TeachingMentorship.html">Teaching and Mentorship</a></li>
+								<li><a href="/TeachingMentorship/">Teaching and Mentorship</a></li>
 
 								<li class="current"><a href="AboutMe.html">About Me</a></li>
 							</ul>
