--- a/TeachingMentorship.html
+++ b/TeachingMentorship.html
@@ -72,7 +72,7 @@
 							      </header>
 
 							      <span class="image featured">
-							        <img src="images/boat_Montana_small.jpg" alt="" />
+							        <img src="images/boat_Montana.jpg" alt="" style="width:400px; height:auto; display:block; margin:0 auto;"  />
 							      </span>
 
 							      <h3>Teaching</h3>
