--- a/TeachingMentorship/index.html
+++ b/TeachingMentorship/index.html
@@ -34,7 +34,7 @@
 									</ul>
 								</li>
 								
-								<li class="current"><a href="TeachingMentorship.html">Teaching and Mentorship</a></li>
+								<li class = "current"><a href="/TeachingMentorship/">Teaching and Mentorship</a></li>
 								<li><a href="AboutMe.html">About Me</a></li>
 							</ul>
 						</nav>
@@ -72,7 +72,7 @@
 							      </header>
 
 							      <span class="image featured">
-							        <img src="images/boat_Montana_small.jpg" alt="" />
+							        <img src="images/boat_Montana.jpg" alt="" style="width:400px; height:auto; display:block; margin:0 auto;"  />
 							      </span>
 
 							      <h3>Teaching</h3>
