--- a/AboutMe.html
+++ b/AboutMe.html
@@ -79,7 +79,7 @@
 							<h3>Publications</h3>
 
 							<ul class = "links">
-								<li> <a href = "https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/1365-2664.70064" > Detmer, T.M.*, Airey, M.E.*, Jirka, K.J., Randall, E.A., Zarri, L.J., McIntyre, P.B., Kraft, C.E. (2025). Community-wide transient dynamics of lake fish populations in response to two decades of suppressing an invasive predator. Journal of Applied Ecology. </a> </li>
+								<li> Detmer, T.M.*, Airey, M.E.*, Jirka, K.J., Randall, E.A., Zarri, L.J., McIntyre, P.B., Kraft, C.E. (2025). Community-wide transient dynamics of lake fish populations in response to two decades of suppressing an invasive predator. Journal of Applied Ecology. <a href = "https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/1365-2664.70064" > Link </a> </li>
 
 								<li><a href = "https://www.pnas.org/doi/abs/10.1073/pnas.2424067122" >
 									Zarri, L.J., Kraft, C.E., McIntyre, P.B., Baetscher, D.S., Jirka, K.J., Randall, E.A., Marcy-Quay, B , St. John, C.A., Sethi, S.A., Airey, M.E. , Detmer, T.M., Flecker, A.S., Therkildsen, N.O.. (2025). Rapid evolution impedes eradication of an introduced predator. Proceedings of the National Academy of Sciences.
