--- a/AboutMe.html
+++ b/AboutMe.html
@@ -81,24 +81,24 @@
 							<ul class = "links">
 								<li> Detmer, T.M.*, Airey, M.E.*, Jirka, K.J., Randall, E.A., Zarri, L.J., McIntyre, P.B., Kraft, C.E. (2025). Community-wide transient dynamics of lake fish populations in response to two decades of suppressing an invasive predator. Journal of Applied Ecology. <a href = "https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/1365-2664.70064" > Link </a> </li>
 
-								<li><a href = "https://www.pnas.org/doi/abs/10.1073/pnas.2424067122" >
-									Zarri, L.J., Kraft, C.E., McIntyre, P.B., Baetscher, D.S., Jirka, K.J., Randall, E.A., Marcy-Quay, B , St. John, C.A., Sethi, S.A., Airey, M.E. , Detmer, T.M., Flecker, A.S., Therkildsen, N.O.. (2025). Rapid evolution impedes eradication of an introduced predator. Proceedings of the National Academy of Sciences.
+								<li>
+									Zarri, L.J., Kraft, C.E., McIntyre, P.B., Baetscher, D.S., Jirka, K.J., Randall, E.A., Marcy-Quay, B , St. John, C.A., Sethi, S.A., Airey, M.E. , Detmer, T.M., Flecker, A.S., Therkildsen, N.O.. (2025). Rapid evolution impedes eradication of an introduced predator. Proceedings of the National Academy of Sciences. <a href = "https://www.pnas.org/doi/abs/10.1073/pnas.2424067122" >Link</a>
 								</li>
 
-								<li> <a href = "https://link.springer.com/article/10.1007/s10750-025-05958-3" >
-									Woo, M., Airey, M.E., McIntyre, P.B., Detmer, T.D.. (2025). Lakeshore residential development: A functional comparison of natural and artificial woody habitat at the macroinvertebrate level. Hydrobiologia. 
+								<li> 
+									Woo, M., Airey, M.E., McIntyre, P.B., Detmer, T.D.. (2025). Lakeshore residential development: A functional comparison of natural and artificial woody habitat at the macroinvertebrate level. Hydrobiologia.<a href = "https://link.springer.com/article/10.1007/s10750-025-05958-3" >Link</a>
 								</li>
 
-								<li> <a href = "https://link.springer.com/article/10.1007/s10530-023-03153-w" >
-									Airey, M.E., Fogg, A. Q., and Drew, J. A. (2023). Invasive lionfish dispersal between shallow-and deep-water habitats within coastal Floridian waters. Biological Invasions, 1-9. 
+								<li>
+									Airey, M.E., Fogg, A. Q., and Drew, J. A. (2023). Invasive lionfish dispersal between shallow-and deep-water habitats within coastal Floridian waters. Biological Invasions, 1-9.  <a href = "https://link.springer.com/article/10.1007/s10530-023-03153-w" >Link</a>
 								</li>
 
-								<li><a href = "https://par.nsf.gov/servlets/purl/10373913" >
-									Wollmuth EM, Sless TJL, Airey, M.E., France ED, Stump EM, Sundstrom MA, Wilkins RL, and Smith MK. (2022). Is Earth currently undergoing a sixth mass extinction? CourseSource. 
+								<li>
+									Wollmuth EM, Sless TJL, Airey, M.E., France ED, Stump EM, Sundstrom MA, Wilkins RL, and Smith MK. (2022). Is Earth currently undergoing a sixth mass extinction? CourseSource.<a href = "https://par.nsf.gov/servlets/purl/10373913" >Link</a> 
 								</li>
 
-								<li> <a href = "https://conbio.onlinelibrary.wiley.com/doi/full/10.1111/csp2.531" >
-								Drew, J., Kahn, B., Locatelli, N., Airey, M.E., and Humphries, A. (2021). Examining stakeholder perceptions of oyster ecosystem services using fuzzy cognitive mapping. Conservation Science and Practice, 3(11), e531.
+								<li> 
+								Drew, J., Kahn, B., Locatelli, N., Airey, M.E., and Humphries, A. (2021). Examining stakeholder perceptions of oyster ecosystem services using fuzzy cognitive mapping. Conservation Science and Practice, 3(11), e531. <a href = "https://conbio.onlinelibrary.wiley.com/doi/full/10.1111/csp2.531" >Link</a>
 								</li>	
 
 
