--- a/ResearchOverview.html
+++ b/ResearchOverview.html
@@ -100,11 +100,11 @@
 											<p> Aquatic ecosystems are shaped both by the choices of individual fish and the interactions among communities. My work aims to connect those scales, linking food web structure and long-term community changes to habitat use and assemblage structures. 
 
 											<h3> <a href="NonNativePred.html">Food Webs and Communities</a></h3>
-											<p> At broad spatial and temporal scales, this work examines how species interactions structure aquatic assemblages. I use stable isotope ecology to characterize food web organization, with a focus on how communities respod to disturbances like non-native predator introductions and climate change. I use spatial surveys and time-series data to provide insight ito commmunity composition, integrating species- to ecosystem-level perspectives on aquatic biodiversity.</p>
+											<p> Aquatic ecosystems are undergoing rapid change as climate warming, species introductions, and other human disturbances alter the structure of communities worldwide. Understanding how biodiversity supports ecosystem stability and resilience requires linking species interactions to broader patterns of community organization. My research applies stable isotope ecology to examine food web dynamics, focusing on how aquatic assemblages respond to disturbances such as non-native predator introductions and climate change. By integrating spatial surveys with long-term time-series data, I provide new perspectives on the ecological processes that shape biodiversity from species to ecosystem.</p>
 
 											<h3> <a href = "TrophicDiversity.html"> Habitat Use and Movement</a></h3>
 
-											<p>This research uses community data and otolith chemistry to investigate how fishes interact with their environment. Analyses of otoliths reveal movement histories and thermal habitat use, spanning systems  from invasive lionfish to native fish in Montane lakes. These approaches link individual habitat choices to broader ecological processes, exploring the interaction between environmental variation and species' distribution.</p>
+											<p>Fishes play essential roles in ecosystems and food webs, yet their responses to environmental variation remain difficult to predict. My research combines community data with otolith chemistry to uncover links between individual habitat use and broader ecological processes. By reconstructing movement histories and thermal habitat use from otoliths, I investigate patterns across systems ranging from invasive lionfish to native minnows in montane lakes. These approaches reveal how environmental variation shapes species distributions, connecting individual behavior to community- and ecosystem-level dynamics.</p>
 										</article>
 
 								</div>
